--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,10 @@
         "no-use-before-define": 0,
         "object-curly-newline": 0,
         "react/prop-types": 0,
-        "react/destructuring-assignment": 0
+        "react/destructuring-assignment": 0,
+        "no-else-return": 0,
+        "radix": 0,
+        "max-len": 0,
+        "consistent-return": 0
     }
 }
