--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,9 @@
         "consistent-return": 0,
         "react/jsx-boolean-value": 0,
         "camelcase": 0,
-        "no-unused-vars": 0
+        "no-unused-vars": 0,
+        "react/no-unstable-nested-components": 0,
+        "no-param-reassign": 0,
+        "default-param-last": 0
     }
 }
